sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:3: error: not found: value inversement
  inversement=false
  ^AlgCocktailSort1:4: error: not found: value inversement
  while(inversement){
        ^AlgCocktailSort1:7: error: not found: value inverse
        inverse(i,i+1)
        ^AlgCocktailSort1:8: error: not found: value inversement
        inversement=true
        ^AlgCocktailSort1:11: error: not found: value inverse
          inverse(etNombreValeurs()-i,getNombreValeurs()-i-1)
          ^AlgCocktailSort1:11: error: not found: value etNombreValeurs
          inverse(etNombreValeurs()-i,getNombreValeurs()-i-1)
                  ^AlgCocktailSort1:12: error: not found: value inversement
        	inversement=true
                ^